# web-crawler-scheduler

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/web_crawler_scheduler/: __init__.py  __main__.py  fetcher.py  frontier.py  link_extractor.py  models.py  pipeline.py  protocols.py  rate_limiter.py  robots.py  urlnorm.py
tests/: conftest.py  test_cli.py  test_fetcher.py  test_frontier.py  test_link_extractor.py  test_models.py  test_pipeline.py  test_rate_limiter.py  test_robots.py  test_urlnorm.py
