[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-crawler-scheduler"
version = "0.1.0"
description = "An async, polite web crawler with priority frontier, robots.txt compliance, and outbound link graph extraction."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Juan Martos Cuevas", email = "martoscuevasjuan@gmail.com" }]
dependencies = [
    "aiohttp>=3.9,<4",
]

[project.scripts]
web-crawler-scheduler = "web_crawler_scheduler.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "aioresponses>=0.7,<1",
    "mypy>=1.10,<2",
    "ruff>=0.5,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/web_crawler_scheduler"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
